--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,32 @@
-# Server
+# ================= SERVER =================
 server.port=8083
 
-# Spring Application
+# ================= SPRING APPLICATION =================
 spring.application.name=delivery-service
 
-# Datasource (H2 in-memory)
-spring.datasource.url= 
-spring.datasource.driver-class-name=org.postgresql.Driver
+# ================= DATASOURCE (PostgreSQL) =================
+spring.datasource.url=jdbc:postgresql://localhost:5432/delivery_service
 spring.datasource.username=postgres
 spring.datasource.password=syrine1254xxy
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate
+# ================= JPA / HIBERNATE =================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.h2.console.enabled=false
+# ================= EUREKA CLIENT =================
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
+# ================= LOGGING =================
+# General Spring logs
+logging.level.org.springframework=INFO
+
+# Hibernate SQL logs
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Your application logs (replace 'tn.enis.fooddelivery' with your package if needed)
+logging.level.tn.enis.fooddelivery=DEBUG
