--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8083
 spring.application.name=delivery-service
 
 # ================= DATASOURCE (PostgreSQL) =================
+# Use environment variables: DB_URL, DB_USERNAME, DB_PASSWORD
 spring.datasource.url=jdbc:postgresql://localhost:5432/delivery_service
 spring.datasource.username=postgres
 spring.datasource.password=syrine1254xxy
@@ -12,21 +13,43 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ================= JPA / HIBERNATE =================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
 # ================= EUREKA CLIENT =================
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.instance.prefer-ip-address=true
+eureka.client.healthcheck.enabled=true
+
+# ================= ACTUATOR =================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
 
 # ================= LOGGING =================
 # General Spring logs
 logging.level.org.springframework=INFO
+logging.level.org.springframework.security=DEBUG
 
 # Hibernate SQL logs
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Your application logs (replace 'tn.enis.fooddelivery' with your package if needed)
+# Your application logs
 logging.level.tn.enis.fooddelivery=DEBUG
+
+
+# JWT Secret - Use environment variable JWT_SECRET
+jwt.secret=${JWT_SECRET:b8f1339f-bb76-4d62-abd9-4adde208ee3f}
+
+# Auth Service Configuration
+auth.service.url=${AUTH_SERVICE_URL:http://localhost:8081/api/auth/login}
+
+# Connection Timeout (milliseconds)
+restclient.connectTimeout=5000
+restclient.readTimeout=10000
