--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.jpa.properties.hibernate.order_updates=true
 
 # ================= EUREKA CLIENT =================
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 eureka.client.healthcheck.enabled=true
 
